--- a/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/PasswordReset.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/PasswordReset.razor
@@ -1,9 +1,11 @@
 ﻿@layout UnauthenticatedLayout
 @page "/iam/pass-reset"
+@using vetcms.BrowserPresentation.Utility
 @using vetcms.ClientApplication.Features.IAM.ResetPassword
 @inject NavigationManager Navigation
 @inject MediatR.IMediator Mediator
 @inject IDialogService DialogService
+@inject IToastService toastService;
 
 <FluentGrid Justify="JustifyContent.Center">
     <FluentGridItem xs="12" sm="6" md="4" lg="3">
@@ -25,18 +27,18 @@
                 </FluentGridItem>
 
                 <FluentGridItem xs="12" sm="12" md="12" lg="12">
-                    <FluentTextField Value="verificationCode" Label="Biztonsági kód" TextFieldType="TextFieldType.Text" Required Style="width: 100%;">
+                    <FluentTextField @bind-Value="verificationCode" Label="Biztonsági kód" TextFieldType="TextFieldType.Text" Required Style="width: 100%;">
                     </FluentTextField>
                 </FluentGridItem>
 
                 <FluentGridItem xs="12" sm="12" md="12" lg="12">
-                    <FluentTextField Value="pass1" Label="Jelszó" TextFieldType="@(ShowPassword ? TextFieldType.Text : TextFieldType.Password)" Required Style="width: 100%;">
+                    <FluentTextField @bind-Value="pass1" Label="Jelszó" TextFieldType="@(ShowPassword ? TextFieldType.Text : TextFieldType.Password)" Required Style="width: 100%;">
                         <FluentIcon Value="@ChangeIcon()" @onclick="ToglePasswordVisibility" Color="@Color.Neutral" Slot="end" />
                     </FluentTextField>
                 </FluentGridItem>
 
                 <FluentGridItem xs="12" sm="12" md="12" lg="12">
-                    <FluentTextField Value="pass2" Label="Jelszó mégegyszer" TextFieldType="@(ShowPassword ? TextFieldType.Text : TextFieldType.Password)" Required Style="width: 100%;">
+                    <FluentTextField @bind-Value="pass2" Label="Jelszó mégegyszer" TextFieldType="@(ShowPassword ? TextFieldType.Text : TextFieldType.Password)" Required Style="width: 100%;">
                         <FluentIcon Value="@ChangeIcon()" @onclick="ToglePasswordVisibility" Color="@Color.Neutral" Slot="end" />
                     </FluentTextField>
                 </FluentGridItem>
@@ -58,8 +60,11 @@
     private bool ShowPassword = false;
     string verificationCode = string.Empty, email = string.Empty, pass1 = string.Empty, pass2 = string.Empty;
 
-    private async void ChangePassword()
+    
+
+    private async Task ChangePassword()
     {
+        Console.WriteLine("ChangePassword");
         ConfirmResetPasswordClientCommand confirmResetPasswordClientCommand = new(DialogService)
         {
             Email = email,
@@ -67,7 +72,11 @@
             Password1 = pass1,
             Password2 = pass2
         };
-        await Mediator.Send(confirmResetPasswordClientCommand);
+        bool result = await toastService.ShowIndeterminateProgressToast<bool>(Mediator.Send(confirmResetPasswordClientCommand), "Adatok feldolgozása folyamatban...");
+        if (result)
+        {
+            Navigation.NavigateTo("/iam/login");
+        }
     }
 
 
