delete and first time auth implement start

--- a/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/UserManagement.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/UserManagement.razor
@@ -136,6 +136,8 @@
             await ToastService.ShowIndeterminateProgressToast(Mediator.Send(command), "Kérjük várjon...", "Felhasználók törlése folyamatban...");
         }
 
+        await Mediator.Send(command);
+
         isBusy = false;
     }
 
