--- a/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/UserManagement.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/UserManagement.razor
@@ -25,17 +25,18 @@
                     <FluentButton Disabled="isBusy" @onclick="@DeleteUsers" style="padding-bottom: 5px;" IconStart="@(new Icons.Regular.Size16.PersonDelete())" Appearance="Appearance.Accent">Törlés</FluentButton>
                 </PermissionWrapper>
                 <div slot="end">
-                    <FluentSearch Disabled="isBusy" @bind-Value=searchValue AutoComplete="off"/>
+                    <FluentSearch Disabled="isBusy" @bind-Value="searchValue" Immediate="true" ImmediateDelay="300" @bind-Value:after="SearchValueChanged" AutoComplete="off" />
                 </div>
             </FluentToolbar>
         </FluentGridItem>
         <FluentGridItem xs="12">
             <FluentDataGrid
-            Virtualize="true"
-            ItemsProvider="personProvider"
-            GenerateHeader="GenerateHeaderOption.Sticky"
-            Style="min-width: max-content;"
-            Pagination="@pagination"
+                Virtualize="true"
+                ItemsProvider="personProvider"
+                GenerateHeader="GenerateHeaderOption.Sticky"
+                Style="min-width: max-content;"
+                Pagination="@pagination"
+                @ref="dataGrid"
             >
                 <SelectColumn TGridItem="SelectableUserDto"
                                 SelectMode="DataGridSelectMode.Multiple"
@@ -68,11 +69,12 @@
 </FluentCard>
 
 @code {
-    private string searchValue = "one";
+    private string searchValue = "";
     GridItemsProvider<SelectableUserDto> personProvider = default!;
     bool isBusy = false;
-    PaginationState pagination = new PaginationState { ItemsPerPage = 25 };
+    PaginationState pagination = new PaginationState { ItemsPerPage = 10 };
     IEnumerable<SelectableUserDto>? selectedUsers = new List<SelectableUserDto>();
+    private FluentDataGrid<SelectableUserDto> dataGrid;
 
     private class SelectableUserDto : UserDto
     {
@@ -85,18 +87,23 @@
 
     }
 
+    private async Task SearchValueChanged()
+    {
+        await dataGrid.RefreshDataAsync();
+    }
+
     private async ValueTask<GridItemsProviderResult<SelectableUserDto>> gridItemsProviderResult(GridItemsProviderRequest<SelectableUserDto> req)
     {
         var query = new UserListClientQuery()
             {
-                SearchQuery = searchValue,
+                SearchTerm = searchValue,
                 Skip = req.StartIndex,
                 Take = req.Count.HasValue ? req.Count.Value : 10
             };
 
         var data = await ToastService.ShowIndeterminateProgressToast(Mediator.Send(query), "Kérjük várjon...", "Felhasználók betöltése folyamatban...");
 
-        List<SelectableUserDto> users = data.UserQueryResult.Select(u => new SelectableUserDto
+        List<SelectableUserDto> users = data.Users.Select(u => new SelectableUserDto
             {
                 Id = u.Id,
                 VisibleName = u.VisibleName,
@@ -215,15 +222,15 @@
 
     private async Task<UserDto> LoadEditUserData(int id)
     {
+		// TODO: Load user data
         var query = new UserListClientQuery()
         {
-            UserId = id,
             Take = 1
         };
 
         var data = await Mediator.Send(query);
 
-        return data.UserQueryResult.FirstOrDefault();
+        return data.Users.FirstOrDefault();
     }
 
     private async Task SubmitNewUserData(UserDto newUser)
