user delete, new user, edit user final clean up

--- a/vetcms/src/vetcms.BrowserPresentation/Components/EditUserDialog.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Components/EditUserDialog.razor
@@ -28,6 +28,9 @@
             <FluentGridItem xs="12" sm="6">
                 <FluentTextField Style="width: 100%" @bind-Value="Content.PhoneNumber" TextFieldType="TextFieldType.Tel" Label="Telefonszám" />
             </FluentGridItem>
+            <FluentGridItem xs="12" sm="6">
+                <FluentTextField Style="width: 100%" @bind-Value="Content.Password" TextFieldType="TextFieldType.Password" Label="Jelszó" />
+            </FluentGridItem>
         </FluentGrid>
     </FluentGridItem>
     <FluentGridItem xs="12" md="6">
