--- a/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/FirstTimeSigninPage.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/FirstTimeSigninPage.razor
@@ -1,5 +1,5 @@
 ﻿@layout UnauthenticatedLayout
-@page "/iam/first-time-signin/{code}"
+@page "/iam/first-time-login/{code}"
 @using vetcms.BrowserPresentation.Utility
 @using vetcms.ClientApplication.Features.IAM.FirstTimeSignin
 @using vetcms.ClientApplication.Features.IAM.ResetPassword
@@ -56,9 +56,10 @@
 @code {
     [Parameter]
     public string? code { get; set; }
+    public string? pass1 { get; set; }
+    public string? pass2 { get; set; }
 
     private bool ShowPassword = false;
-    string email = string.Empty, pass1 = string.Empty, pass2 = string.Empty;
 
     private async void ChangePassword()
     {
@@ -68,6 +69,9 @@
             NewPassword = pass1,
             NewPasswordConfirmation = pass2
         };
+
+        Console.WriteLine("NewPassword: " + pass1);
+        Console.WriteLine("NewPasswordConfirmation: " + pass2);
 
         bool result = await ToastService.ShowIndeterminateProgressToast(Mediator.Send(command), "Kérjük várjon...", "Adatok feldolgozása folyamatban.");
 
