--- a/vetcms/src/vetcms.BrowserPresentation/Components/PermissionWrapper.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Components/PermissionWrapper.razor
@@ -21,6 +21,7 @@
     {
         var query = new CheckPermissionQuery(RequiredPermissions);
         QueryResult = await Mediator.Send(query);
+        Console.WriteLine(QueryResult);
     }
 
     protected override async Task OnInitializedAsync()
