--- a/vetcms/src/vetcms.BrowserPresentation/Components/MyProfileMenuComponent.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Components/MyProfileMenuComponent.razor
@@ -23,8 +23,8 @@
     <FooterTemplate>
         <FluentStack>
             <FluentAnchor Appearance="@Appearance.Hypertext"
-                          Href="/iam/user-management"
-                          >Fiók kezelése</FluentAnchor>
+                          Href="/iam/user-profile">
+                          Fiók kezelése</FluentAnchor>
             <FluentSpacer />
             <FluentAnchor Appearance="@Appearance.Hypertext"
                           OnClick="Logout"
