--- a/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/UserManagement.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/UserManagement.razor
@@ -9,7 +9,7 @@
 @using vetcms.ClientApplication.Features.IAM.UserList
 @using vetcms.SharedModels.Common.Dto
 @inject IDialogService DialogService
-@inject IToastService ToastService;
+@inject IToastService ToastService
 @inject MediatR.IMediator Mediator
 
 <div>
