start to implement animal management

--- a/vetcms/src/vetcms.BrowserPresentation/Layout/NavMenu.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Layout/NavMenu.razor
@@ -9,6 +9,9 @@
             <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_VIEW_OTHER_USER]">
                 <FluentNavLink Href="/iam/user-management" Icon="@(new Icons.Regular.Size20.PersonBoard())" IconColor="Color.Accent">Felhasználók kezelése</FluentNavLink>
              </PermissionWrapper>
+            <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_VIEW_OTHER_USER]">
+                <FluentNavLink Href="/iam/animal-management" Icon="@(new Icons.Regular.Size20.PersonBoard())" IconColor="Color.Accent">Állatfajok kezelése</FluentNavLink>
+            </PermissionWrapper>
         </FluentNavMenu>
     </nav>
 </div>
