--- a/vetcms/src/vetcms.BrowserPresentation/Layout/NavMenu.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Layout/NavMenu.razor
@@ -10,7 +10,10 @@
                 <FluentNavLink Href="/iam/user-management" Icon="@(new Icons.Regular.Size20.PersonBoard())" IconColor="Color.Accent">Felhasználók kezelése</FluentNavLink>
              </PermissionWrapper>
             <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_VIEW_OTHER_USER]">
-                <FluentNavLink Href="/iam/animal-management" Icon="@(new Icons.Regular.Size20.PersonBoard())" IconColor="Color.Accent">Állatfajok kezelése</FluentNavLink>
+                <FluentNavLink Href="/iam/breed-management" Icon="@(new Icons.Regular.Size20.PersonBoard())" IconColor="Color.Accent">Állatfajok kezelése</FluentNavLink>
+            </PermissionWrapper>
+            <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_VIEW_OTHER_USER]">
+                <FluentNavLink Href="/iam/type-management" Icon="@(new Icons.Regular.Size20.PersonBoard())" IconColor="Color.Accent">Állattípusok kezelése</FluentNavLink>
             </PermissionWrapper>
         </FluentNavMenu>
     </nav>
