--- a/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/BreedManagement.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Pages/Features/IAM/BreedManagement.razor
@@ -1,4 +1,4 @@
-﻿@page "/iam/animal-management"
+﻿@page "/iam/breed-management"
 @using vetcms.BrowserPresentation.Components
 @using vetcms.BrowserPresentation.Utility
 @using vetcms.ClientApplication.Common.CommandAbstraction
@@ -18,10 +18,10 @@
     <FluentGrid>
         <FluentGridItem xs="12">
             <FluentToolbar id="toolbar-fluent-components" style="width:100%">
-                <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_ADD_NEW_BREED]">
+                <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_ADD_ANIMAL_BREED]">
                     <FluentButton Disabled="isBusy" @onclick="@OpenCreateAnimalBreedDialog" style="padding-bottom: 5px;" IconStart="@(new Icons.Regular.Size16.PersonAdd())" Appearance="Appearance.Accent">Új állatfaj</FluentButton>
                 </PermissionWrapper>
-                <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_DELETE_BREED]">
+                <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_DELETE_ANIMAL_BREED]">
                     <FluentButton Disabled="isBusy"  style="padding-bottom: 5px;" IconStart="@(new Icons.Regular.Size16.PersonDelete())" Appearance="Appearance.Accent">Törlés</FluentButton>
                 </PermissionWrapper>
                 <div slot="end">
@@ -47,7 +47,7 @@
                 <PropertyColumn Title="Jellemzők" Property="@(p => p.Charachteristics)" Sortable="true" />
 
                 <TemplateColumn Title="Művelet" Align="@Align.End">
-                     <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_MODIFY_ANIMAL_BREED]">
+                     <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_MODIFY_ANIMAL_TYPES]">
                         <FluentButton Disabled="isBusy" aria-label="Szerkesztés" OnClick="@(async ()=> await OpenEditAnimalBreedDialog(context))" IconStart="@(new Icons.Regular.Size16.Edit())" />
                     </PermissionWrapper> 
 
