--- a/vetcms/src/vetcms.BrowserPresentation/Components/EditAnimalTypeDialog.razor
+++ b/vetcms/src/vetcms.BrowserPresentation/Components/EditAnimalTypeDialog.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Globalization
 @using vetcms.BrowserPresentation.Utility
 @using vetcms.ClientApplication.Common.CommandAbstraction;
+@using vetcms.ClientApplication.Features.PatientClassification.ListAnimalBreedByType
 @using vetcms.ClientApplication.Features.PatientClassification.ListAnimalType
 @using vetcms.SharedModels.Common.Dto
 @using vetcms.SharedModels.Common.IAM.Authorization;
@@ -19,11 +20,11 @@
                 <FluentTextArea Style="width: 100%" @bind-Value="Content.Description" Label="Leírás" />
             </FluentGridItem>
 
-            <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_VIEW_ANIMAL_TYPES]">
+            <PermissionWrapper RequiredPermissions="[PermissionFlags.CAN_LOGIN]">
                 <FluentGridItem Style="display: flex; flex-direction: column; height: 100%;" xs="12" md="12">
                     <FluentSearch Style="width: 40%; margin-bottom: 10px;" Disabled="isBusy" @bind-Value="searchTerm" ImmediateDelay="300" AutoComplete="off" Placeholder="Keresés..." />
                     <div style="width: 40%; max-height: 300px; overflow-y: auto; border: 1px solid #ccc; padding: 5px;">
-                        <FluentListbox Style="width: 100%;" Items="animalTypes" OptionText="@(at => at.TypeName)" Label="Állatfajok" />
+                        <FluentListbox Style="width: 100%;" Items="animalBreeds" OptionText="@(at => at.BreedName)" Label="Állatfajok" />
                     </div>
                 </FluentGridItem>
             </PermissionWrapper>
@@ -41,28 +42,28 @@
     private bool isBusy = false;
     private string searchTerm = "";
 
-    private List<AnimalTypeDto> animalTypes = new();
+    private List<AnimalBreedDto> animalBreeds = new();
 
     protected override async Task OnInitializedAsync()
     {
-        animalTypes = await GetAnimalTypes();
+        animalBreeds = await GetAnimalBreeds();
     }
 
-    private async Task<List<AnimalTypeDto>> GetAnimalTypes()
+    private async Task<List<AnimalBreedDto>> GetAnimalBreeds()
     {
-        var query = new AnimalTypeListClientQuery
+        var query = new ListAnimalBreedByTypeClientQuery()
             {
-                SearchTerm = searchTerm,
-                Take = null
+                TypeId = Content.Id,
             };
+
 
         var result = await ToastService.ShowIndeterminateProgressToast(Mediator.Send(query), "Kérjük várjon...", "Állatfajok betöltése folyamatban...");
 
         if (result == null)
         {
-            result = new AnimalTypeListClientQueryResponse();
+            result = new ListAnimalBreedByTypeClientQueryResponse();
         }
-        return result.AnimalType;
+        return result.BreedList;
     }
 }
 
